2004-06-08  Gavin Sinclair <gsinclair@soyabean.com.au>
	* bin/gem: renamed --upgrade-dist to --upgrade--all and fixed bug.
	* lib/rubygems/installer.rb: fixed bug with Ruby version assertion.

2004-06-07  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/remote_installer.rb, lib/rubygems/version.rb: Fixed old
	  dependency on #version method for Gem::Version::Requirement
	* bin/gem: new --upgrade-dist option allows one to upgrade every
	  installed gem
	* lib/rubygems/specification.rb,lib/rubygems/installer.rb: new
	  #required_ruby_version attribute added to gem specification for specifying a
	  dependency on which version of ruby the gem needs.	Format it accepts is
	  the same as the Gem::Version::Requirement format.

2004-06-06  Chad Fowler  <chad@chadfowler.com>
	* bin/gem: install_stub is once again the default due to requests.

2004-06-04  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/specification.rb, lib/rubygems/doc_manager.rb:  
	Allow arbitrary files to be added for rdoc to run over them (as per
	Jim's request).

2004-06-04  Chad Fowler  <chad@chadfowler.com>
	* bin/gem:  Reformatted --search and --list output such that
	multiple versions of a gem are compressed into a single entry
	(with version numbers in parentheses)

2004-05-31  Jim Weirich  <jweirich@one.net>

	* lib/rubygems/version.rb (Gem::Dependency): Dependency attribute
	renamed to version_requirements (made plural).
	(Gem::Version::bump): Added bump to implement pessimistic
	operator.
	(Gem::Version::Requirement): Added pessimistic operator to list of
	operators. Operators now implemented using lambda.

	* lib/rubygems.rb (Kernel::require_gem): require_gem now takes an
	array of requirement strings.

	* lib/rubygems/version.rb (Gem::Version::Requirement::initialize):
	Simplified initialization by making parse a bit smarter.
	(Gem::Version::Requirement::satisfied_by): Simplified by using
	all?
	(Gem::Version::Requirement::satisfy): Added explicit one
	requirement satisfy test.