@@ -159,10 +159,12 @@ TEXT
         sitelibdir = Config::CONFIG['sitelibdir']
         if FileTest.writable?(sitelibdir)
           target_file = File.join(sitelibdir, "#{spec.autorequire}.rb")
-          if FileTest.exist?(target_file) 
-            STDERR.puts "(WARN) Library file '#{target_file}'"
-            STDERR.puts "       already exists; not overwriting.  If you want to force a"
-            STDERR.puts "       library stub, delete the file and reinstall."
+          if FileTest.exist?(target_file)
+            unless library_stub?(target_file)
+              STDERR.puts "(WARN) Library file '#{target_file}'"
+              STDERR.puts "       already exists; not overwriting.  If you want to force a"
+              STDERR.puts "       library stub, delete the file and reinstall."
+            end
           else
             # Create #{autorequire}.rb in #{target_dir}.
           unless File.exist? File.dirname(target_file)
@@ -198,6 +200,17 @@ $".delete('#{file_name}')
 require_gem '#{name}'
 TEXT
       text
+    end
+
+    ##
+    # Returns true iff the given filename contains a library stub.  (Best guess!)
+    #
+    def library_stub?(filename)
+      lines = File.read(filename)
+      lines.grep(/^# This file was generated by RubyGems/) and
+        lines.grep(/is installed as part of a gem, and/) and
+        lines.grep(/^#/).size == 7 and
+        lines.size == 11
     end
     
     def build_extensions(directory, spec)
